优化发布模式 优化日志记录